# CProgramming

./: 19_arraymax.c  20_average.c  21_fibonacci.c  22_fgets.c  23_randomnumber.c  24_numberguess.c  CMakeLists.txt  README.md  customer_tracking.c  pointer.c
order automation/: customer.c  customer.h  order.c  order.h  order_automation.c  product.c  product.h
