cmake_minimum_required(VERSION 3.30)
project(c_programming C)

set(CMAKE_C_STANDARD 11)

add_executable(c_programming main.c)

add_executable(01 01_print_yorum.c
)

add_executable(02 02_variables.c
)
add_executable(03 03_scanf_printf.c
)

add_executable(04 04_operators.c
)

add_executable(05 ifelse.c
)

add_executable(06 06_switchcase.c
)

add_executable(07 07_const.c
)

add_executable(08 08_loops_for.c
)

add_executable(09 09_loop_while.c
)

add_executable(10 10_do_while.c
)

add_executable(11 11_break_continue.c
)

add_executable(12 12_function.c
)

add_executable(13 13_recursive.c
)


add_executable(14 14_array.c
)

add_executable(15 15_array2.c
)

add_executable(16 16_sizeof.c
)

add_executable(17 17_string.c
)

add_executable(18 18_findmax.c
)

add_executable(19 19_arraymax.c
)

add_executable(20 20_average.c
)

add_executable(21 21_fibonacci.c
)

add_executable(22 22_fgets.c
)

add_executable(23 23_randomnumber.c
)

add_executable(24 24_numberguess.c
)

add_executable(25 25_variableaddress.c
)

add_executable(26 26_pointer.c
)